basic routing with /home and /actionlist

--- a/src/app/action-list/action-list.component.html
+++ b/src/app/action-list/action-list.component.html
@@ -1,4 +1,4 @@
-<ul>
+<ul>What do you want to do?
     <li (click)="getRecords()">{{ record.get() }}</li>
     <li (click)="postRecord()">{{ record.post() }}</li>
     <li (click)="updateRecord()">{{ record.update() }}</li>
