--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,2 @@
 <h1>Welcome to Accounting App Home!</h1>
-<p>What would you like to do?</p>
-<app-action-list />
+<h2><a routerLink="../actionlist">Click here to procede</a></h2>
