--- a/src/app/action-list/action-list.component.html
+++ b/src/app/action-list/action-list.component.html
@@ -1,4 +1,5 @@
-<ul>What do you want to do?
+<h2>What would you like to do?</h2>
+<ul>
     <li (click)="getRecords()">{{ record.get() }}</li>
     <li (click)="postRecord()">{{ record.post() }}</li>
     <li (click)="updateRecord()">{{ record.update() }}</li>
