used input() to pass record data

--- a/src/app/record/record.component.html
+++ b/src/app/record/record.component.html
@@ -1,5 +1,5 @@
 <ul>
-    <li> record.type </li>
-    <li> record.account </li>
-    <li> record.amount </li>
+    <li>{{ record().type }} </li>
+    <li>{{ record().account }} </li>
+    <li>{{ record().amount }} </li>
 </ul>
