--- a/src/app/action-list/action-list.component.html
+++ b/src/app/action-list/action-list.component.html
@@ -1,6 +1,6 @@
 <h2>What would you like to do?</h2>
 <ul>
-    <li (click)="getRecords()"><a routerLink="get">{{ record.get() }}</a></li>
+    <li (click)="getRecords()" routerLink="get">{{ record.get() }}</li>
     <li (click)="postRecord()">{{ record.post() }}</li>
     <li (click)="updateRecord()">{{ record.update() }}</li>
     <li (click)="deleteRecord()">{{ record.delete() }}</li>
