--- a/src/app/record-list/record-list.component.html
+++ b/src/app/record-list/record-list.component.html
@@ -1,4 +1,4 @@
 <ul>
-    <li><app-record /></li>
-    <li><app-record /></li>
+    <li><app-record [record]="records[0]"/></li>
+    <li><app-record [record]="records[1]"/></li>
 </ul>
