using felxbox record table

--- a/src/app/record/record.component.html
+++ b/src/app/record/record.component.html
@@ -1,5 +1,3 @@
-<ul>
-    <li>{{ record().type }} </li>
-    <li>{{ record().account }} </li>
-    <li>{{ record().amount }} </li>
-</ul>
+<div class="type">{{ record().type }} </div>
+<div class="account" >{{ record().account }} </div>
+<div class="amount">{{ record().amount }} </div>
