fixing in rendering records

--- a/src/app/record/record.component.html
+++ b/src/app/record/record.component.html
@@ -1,3 +1,5 @@
-<div class="type">{{ record().type }} </div>
-<div class="account" >{{ record().account }} </div>
-<div class="amount">{{ record().amount }} </div>
+<div class="record">
+    <div class="type">{{ record().type }} </div>
+    <div class="account" >{{ record().account }} </div>
+    <div class="amount">{{ record().amount }} </div>
+</div>
