--- a/src/app/record-table/record-table.component.html
+++ b/src/app/record-table/record-table.component.html
@@ -3,8 +3,9 @@
         <div class="type"><h4>Type</h4></div>
         <div class="account"><h4>Account</h4></div>
         <div class="amount"><h4>Amount</h4></div>
+        <div class="options"></div>
     </div>
     @for (record of records; track record.id) {
-        <app-record [record]="record"/>
+        <app-record [record]="record" />
     }
 </div>
